--- a/CarServiceAssistant/appsettings.json
+++ b/CarServiceAssistant/appsettings.json
@@ -2,6 +2,7 @@
     "Logging": {
         "LogLevel": {
             "Default": "Information",
+            "Microsoft": "Warning",
             "Microsoft.AspNetCore": "Warning"
         }
     },
@@ -9,9 +10,9 @@
         "Default": "Data Source=carservice.db"
     },
     "Ai": {
-        "Enabled": false,
+        "Enabled": true,
         "Gemini": {
-            "ApiKey": "AIzaSyDH-uZi1CX0zmYoXjzVdBKeF-zHeJ_R9tA",
+            "ApiKey": "",
             "Model": "gemini-2.5-flash"
         }
     },
