add app key for tests

--- a/CarServiceAssistant/appsettings.json
+++ b/CarServiceAssistant/appsettings.json
@@ -12,7 +12,7 @@
     "Ai": {
         "Enabled": true,
         "Gemini": {
-            "ApiKey": "",
+            "ApiKey": "AIzaSyDH-uZi1CX0zmYoXjzVdBKeF-zHeJ_R9tA",
             "Model": "gemini-2.5-flash"
         }
     },
